@@ -8,6 +8,7 @@ Release with new features and bugfixes:
 
 * https://github.com/devonfw/IDEasy/issues/1399[#1399]: Welcome message not working on Linux
 * https://github.com/devonfw/IDEasy/issues/1387[#1387]: Hide exception from user when a tool version is not supported
+* https://github.com/devonfw/IDEasy/issues/1389[#1389]: support podman as docker alternative
 
 The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/31?closed=1[milestone 2025.08.001].
 
